--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -48,11 +48,13 @@
         android:id="@+id/descBarang"
         android:layout_width="match_parent"
         android:background="@drawable/shape_login"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:inputType="textMultiLine"
         android:hint="Deskripsi Barang"
-        android:inputType="textEmailAddress"
         android:layout_below="@+id/namaBarang"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/poppins_medium"/>
